--- a/style/style.css
+++ b/style/style.css
@@ -1323,259 +1323,12 @@ a {
 
 /* line 1, scss/_header.scss */
 header {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -moz-box;
-  display: -moz-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-direction: normal;
-  -webkit-box-orient: vertical;
-  -webkit-flex-direction: column;
-  -moz-flex-direction: column;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  -webkit-box-pack: end;
-  -ms-flex-pack: end;
-  -webkit-justify-content: flex-end;
-  -moz-justify-content: flex-end;
-  justify-content: flex-end;
-  text-align: right;
-  padding: 10px;
-  text-transform: uppercase;
-  width: 90%;
-  font-size: xx-large;
-}
-/* line 10, scss/_header.scss */
-header span {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -moz-box;
-  display: -moz-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-direction: normal;
-  -webkit-box-orient: horizontal;
-  -webkit-flex-direction: row;
-  -moz-flex-direction: row;
-  -ms-flex-direction: row;
-  flex-direction: row;
-  -webkit-box-pack: end;
-  -ms-flex-pack: end;
-  -webkit-justify-content: flex-end;
-  -moz-justify-content: flex-end;
-  justify-content: flex-end;
-}
-/* line 14, scss/_header.scss */
-header span p {
-  margin-right: 1ex;
-}
-/* line 16, scss/_header.scss */
-header span p.nobreak {
-  margin: 0;
-}
-/* line 22, scss/_header.scss */
-header .intro {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -moz-box;
-  display: -moz-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-direction: normal;
-  -webkit-box-orient: horizontal;
-  -webkit-flex-direction: row;
-  -moz-flex-direction: row;
-  -ms-flex-direction: row;
-  flex-direction: row;
-  -webkit-box-pack: space-around;
-  -ms-flex-pack: space-around;
-  -webkit-justify-content: space-around;
-  -moz-justify-content: space-around;
-  justify-content: space-around;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  -webkit-align-items: center;
-  -moz-align-items: center;
-  align-items: center;
-  margin-top: 10px;
-}
-/* line 28, scss/_header.scss */
-header .intro .logomask {
-  background: url(../images/logo.png) no-repeat center center;
-  background-size: contain;
-  height: 100px;
-  width: 100px;
-}
-/* line 34, scss/_header.scss */
-header .intro span {
-  text-align: left;
-  color: #000;
-  font-style: italic;
-  font-weight: normal;
-  text-transform: none;
-  font-size: medium;
-  width: 100%;
-}
-
-/* line 1, scss/_index.scss */
-.main {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -moz-box;
-  display: -moz-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-direction: normal;
-  -webkit-box-orient: vertical;
-  -webkit-flex-direction: column;
-  -moz-flex-direction: column;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  -webkit-box-pack: space-around;
-  -ms-flex-pack: space-around;
-  -webkit-justify-content: space-around;
-  -moz-justify-content: space-around;
-  justify-content: space-around;
-  -webkit-align-self: center;
-  -moz-align-self: center;
-  -ms-flex-item-align: center;
-  align-self: center;
-  -webkit-box-align: stretch;
-  -ms-flex-align: stretch;
-  -webkit-align-items: stretch;
-  -moz-align-items: stretch;
-  align-items: stretch;
-  padding: 10px;
-  padding-top: 240px;
-  margin: 10px;
-  width: 80%;
-  background-color: rgba(255, 255, 255, 0.2);
-}
-/* line 14, scss/_index.scss */
-.main a {
-  font-weight: bold;
-  font-style: italic;
-  letter-spacing: -1px;
-  height: 12px;
-}
-/* line 21, scss/_index.scss */
-.main .espace {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -moz-box;
-  display: -moz-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-direction: normal;
-  -webkit-box-orient: horizontal;
-  -webkit-flex-direction: row;
-  -moz-flex-direction: row;
-  -ms-flex-direction: row;
-  flex-direction: row;
-  -webkit-box-pack: end;
-  -ms-flex-pack: end;
-  -webkit-justify-content: flex-end;
-  -moz-justify-content: flex-end;
-  justify-content: flex-end;
-  width: 81%;
-  min-width: 925px;
-  line-height: 150%;
-  text-transform: uppercase;
-  font-weight: bold;
-  font-size: xx-small;
-}
-/* line 33, scss/_index.scss */
-.main .espace a {
-  color: #83A52B;
-  font-style: normal;
-  letter-spacing: inherit;
-}
-/* line 39, scss/_index.scss */
-.main .espace span {
-  color: black;
-}
-/* line 44, scss/_index.scss */
-.main .container {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -moz-box;
-  display: -moz-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-direction: normal;
-  -webkit-box-orient: horizontal;
-  -webkit-flex-direction: row;
-  -moz-flex-direction: row;
-  -ms-flex-direction: row;
-  flex-direction: row;
-  -webkit-box-pack: space-around;
-  -ms-flex-pack: space-around;
-  -webkit-justify-content: space-around;
-  -moz-justify-content: space-around;
-  justify-content: space-around;
-  -webkit-align-self: center;
-  -moz-align-self: center;
-  -ms-flex-item-align: center;
-  align-self: center;
-  -webkit-box-align: start;
-  -ms-flex-align: start;
-  -webkit-align-items: flex-start;
-  -moz-align-items: flex-start;
-  align-items: flex-start;
-  margin-bottom: 10px;
-}
-/* line 53, scss/_index.scss */
-.main .container.center {
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  -webkit-align-items: center;
-  -moz-align-items: center;
-  align-items: center;
-}
-/* line 57, scss/_index.scss */
-.main .container .bar {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -moz-box;
-  display: -moz-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-direction: normal;
-  -webkit-box-orient: horizontal;
-  -webkit-flex-direction: row;
-  -moz-flex-direction: row;
-  -ms-flex-direction: row;
-  flex-direction: row;
-  -webkit-box-pack: space-around;
-  -ms-flex-pack: space-around;
-  -webkit-justify-content: space-around;
-  -moz-justify-content: space-around;
-  justify-content: space-around;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  -webkit-align-items: center;
-  -moz-align-items: center;
-  align-items: center;
-  min-width: 425px;
-  max-width: 50%;
-  font-size: small;
-  text-align: justify;
-}
-/* line 68, scss/_index.scss */
-.main .container .bar .mslider, .main .container .bar .dslider {
-  -webkit-box-pack: space-around;
-  -ms-flex-pack: space-around;
-  -webkit-justify-content: space-around;
-  -moz-justify-content: space-around;
-  justify-content: space-around;
-  -webkit-align-self: center;
-  -moz-align-self: center;
-  -ms-flex-item-align: center;
-  align-self: center;
-}
-/* line 71, scss/_index.scss */
-.main .container .bar .mslider .box, .main .container .bar .dslider .box {
+  -webkit-box-flex: 1;
+  -webkit-flex: 1;
+  -moz-box-flex: 1;
+  -moz-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
   display: -webkit-box;
   display: -webkit-flex;
   display: -moz-box;
@@ -1593,129 +1346,19 @@ header .intro span {
   -webkit-justify-content: space-between;
   -moz-justify-content: space-between;
   justify-content: space-between;
-  -webkit-align-self: center;
-  -moz-align-self: center;
-  -ms-flex-item-align: center;
-  align-self: center;
-  width: 425px;
+  text-align: center;
+  padding: 10px;
+  width: 90%;
+  font-size: xx-large;
 }
-/* line 78, scss/_index.scss */
-.main .container .bar .mslider .box h1, .main .container .bar .dslider .box h1 {
-  font-weight: bold;
-  color: inherit;
-  text-align: justify;
-  text-transform: uppercase;
-  font-size: small;
-}
-/* line 86, scss/_index.scss */
-.main .container .bar .mslider .box p, .main .container .bar .dslider .box p {
-  color: black;
-}
-/* line 91, scss/_index.scss */
-.main .container .bar .dslider {
-  display: none;
-}
-/* line 96, scss/_index.scss */
-.main .container .red {
-  color: #4B1E22;
-}
-/* line 99, scss/_index.scss */
-.main .container .red a {
-  background: url("../images/imgDA.gif") no-repeat left bottom;
-  background-size: contain;
-  padding-left: 20px;
-  padding-bottom: 2px;
-}
-/* line 107, scss/_index.scss */
-.main .container .green {
-  color: #4A765C;
-}
-/* line 109, scss/_index.scss */
-.main .container .green a {
-  background: url("../images/img13C.gif") no-repeat left bottom;
-  background-size: contain;
-  padding-left: 20px;
-  padding-bottom: 2px;
-}
-/* line 117, scss/_index.scss */
-.main .container .content {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -moz-box;
-  display: -moz-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-direction: normal;
-  -webkit-box-orient: vertical;
-  -webkit-flex-direction: column;
-  -moz-flex-direction: column;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  -webkit-box-pack: space-around;
-  -ms-flex-pack: space-around;
-  -webkit-justify-content: space-around;
-  -moz-justify-content: space-around;
-  justify-content: space-around;
-  -webkit-box-align: stretch;
-  -ms-flex-align: stretch;
-  -webkit-align-items: stretch;
-  -moz-align-items: stretch;
-  align-items: stretch;
-  min-width: 497px;
-  max-width: 50%;
-  line-height: 20px;
-  margin-top: 10px;
-}
-/* line 127, scss/_index.scss */
-.main .container .content .thanks {
-  font-weight: bold;
-}
-/* line 130, scss/_index.scss */
-.main .container .content .thanks span {
-  font-size: large;
-}
-/* line 135, scss/_index.scss */
-.main .container .content img {
-  float: left;
-}
-/* line 139, scss/_index.scss */
-.main .container .content p {
-  padding-left: 110px;
-}
-/* line 143, scss/_index.scss */
-.main .container .content .d110 {
-  padding-left: 110px;
-}
-/* line 148, scss/_index.scss */
-.main .logo {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -moz-box;
-  display: -moz-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-direction: normal;
-  -webkit-box-orient: vertical;
-  -webkit-flex-direction: column;
-  -moz-flex-direction: column;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  -webkit-box-pack: space-around;
-  -ms-flex-pack: space-around;
-  -webkit-justify-content: space-around;
-  -moz-justify-content: space-around;
-  justify-content: space-around;
-  -webkit-box-align: stretch;
-  -ms-flex-align: stretch;
-  -webkit-align-items: stretch;
-  -moz-align-items: stretch;
-  align-items: stretch;
-  width: 100%;
-  border: 1px solid black;
-  margin: 5px;
-}
-/* line 157, scss/_index.scss */
-.main .logo .band {
+/* line 11, scss/_header.scss */
+header div, header nav {
+  -webkit-box-flex: 1;
+  -webkit-flex: 1;
+  -moz-box-flex: 1;
+  -moz-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
   display: -webkit-box;
   display: -webkit-flex;
   display: -moz-box;
@@ -1728,25 +1371,93 @@ header .intro span {
   -moz-flex-direction: row;
   -ms-flex-direction: row;
   flex-direction: row;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  -webkit-justify-content: center;
-  -moz-justify-content: center;
-  justify-content: center;
-  -webkit-box-align: stretch;
-  -ms-flex-align: stretch;
-  -webkit-align-items: stretch;
-  -moz-align-items: stretch;
-  align-items: stretch;
-  width: 100%;
-  margin: 10px;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  -webkit-justify-content: space-between;
+  -moz-justify-content: space-between;
+  justify-content: space-between;
 }
-/* line 166, scss/_index.scss */
-.main .logo img {
-  padding: 0 10px;
+/* line 19, scss/_header.scss */
+header div .logo {
+  -webkit-box-flex: 0.5;
+  -webkit-flex: 0.5;
+  -moz-box-flex: 0.5;
+  -moz-flex: 0.5;
+  -ms-flex: 0.5;
+  flex: 0.5;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -moz-flex;
+  display: -ms-flexbox;
+  display: flex;
+  background: url(../images/perso.png) no-repeat center center;
+  background-size: contain;
 }
-/* line 171, scss/_index.scss */
-.main .mention {
+/* line 25, scss/_header.scss */
+header div bar {
+  -webkit-box-flex: 1;
+  -webkit-flex: 1;
+  -moz-box-flex: 1;
+  -moz-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -moz-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-direction: normal;
+  -webkit-box-orient: horizontal;
+  -webkit-flex-direction: Column;
+  -moz-flex-direction: Column;
+  -ms-flex-direction: Column;
+  flex-direction: Column;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  -webkit-justify-content: space-between;
+  -moz-justify-content: space-between;
+  justify-content: space-between;
+}
+/* line 30, scss/_header.scss */
+header div bar h1, header div bar h2 {
+  -webkit-box-flex: 1;
+  -webkit-flex: 1;
+  -moz-box-flex: 1;
+  -moz-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -moz-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-direction: normal;
+  -webkit-box-orient: horizontal;
+  -webkit-flex-direction: Column;
+  -moz-flex-direction: Column;
+  -ms-flex-direction: Column;
+  flex-direction: Column;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  -webkit-justify-content: space-between;
+  -moz-justify-content: space-between;
+  justify-content: space-between;
+}
+/* line 39, scss/_header.scss */
+header nav {
+  margin: 1ex;
+}
+/* line 41, scss/_header.scss */
+header nav ul {
+  -webkit-box-flex: 1;
+  -webkit-flex: 1;
+  -moz-box-flex: 1;
+  -moz-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
   display: -webkit-box;
   display: -webkit-flex;
   display: -moz-box;
@@ -1759,24 +1470,192 @@ header .intro span {
   -moz-flex-direction: row;
   -ms-flex-direction: row;
   flex-direction: row;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  -webkit-justify-content: center;
-  -moz-justify-content: center;
-  justify-content: center;
-  width: 100%;
-  margin: 0;
-  padding: 0;
-  background-color: rgba(75, 30, 34, 0.3);
-  color: #fff;
-  margin-top: 20px;
-  font-size: small;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  -webkit-justify-content: space-between;
+  -moz-justify-content: space-between;
+  justify-content: space-between;
 }
-/* line 182, scss/_index.scss */
-.main .mention a {
-  font-size: small;
-  font-style: normal;
-  font-weight: normal;
-  color: #F7CA79;
-  margin-right: 1ex;
+/* line 46, scss/_header.scss */
+header nav ul li {
+  -webkit-box-flex: 1;
+  -webkit-flex: 1;
+  -moz-box-flex: 1;
+  -moz-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -moz-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-direction: normal;
+  -webkit-box-orient: horizontal;
+  -webkit-flex-direction: row;
+  -moz-flex-direction: row;
+  -ms-flex-direction: row;
+  flex-direction: row;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  -webkit-justify-content: space-between;
+  -moz-justify-content: space-between;
+  justify-content: space-between;
+}
+/* line 51, scss/_header.scss */
+header nav ul li a {
+  text-decoration: underline;
+}
+/* line 53, scss/_header.scss */
+header nav ul li a:hover {
+  font-style: italic;
+}
+
+/* line 1, scss/_index.scss */
+.main {
+  -webkit-box-flex: 1;
+  -webkit-flex: 1;
+  -moz-box-flex: 1;
+  -moz-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -moz-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-direction: normal;
+  -webkit-box-orient: vertical;
+  -webkit-flex-direction: column;
+  -moz-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  -webkit-justify-content: space-between;
+  -moz-justify-content: space-between;
+  justify-content: space-between;
+}
+/* line 6, scss/_index.scss */
+.main h1, .main h2 {
+  -webkit-box-flex: 1;
+  -webkit-flex: 1;
+  -moz-box-flex: 1;
+  -moz-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -moz-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-direction: normal;
+  -webkit-box-orient: horizontal;
+  -webkit-flex-direction: row;
+  -moz-flex-direction: row;
+  -ms-flex-direction: row;
+  flex-direction: row;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  -webkit-justify-content: space-between;
+  -moz-justify-content: space-between;
+  justify-content: space-between;
+}
+/* line 13, scss/_index.scss */
+.main div {
+  -webkit-box-flex: 1;
+  -webkit-flex: 1;
+  -moz-box-flex: 1;
+  -moz-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -moz-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-direction: normal;
+  -webkit-box-orient: vertical;
+  -webkit-flex-direction: column;
+  -moz-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  -webkit-justify-content: space-between;
+  -moz-justify-content: space-between;
+  justify-content: space-between;
+}
+/* line 19, scss/_index.scss */
+.main div p {
+  -webkit-box-flex: 1;
+  -webkit-flex: 1;
+  -moz-box-flex: 1;
+  -moz-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -moz-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-direction: normal;
+  -webkit-box-orient: horizontal;
+  -webkit-flex-direction: row;
+  -moz-flex-direction: row;
+  -ms-flex-direction: row;
+  flex-direction: row;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  -webkit-justify-content: space-between;
+  -moz-justify-content: space-between;
+  justify-content: space-between;
+}
+/* line 24, scss/_index.scss */
+.main div p span {
+  -webkit-box-flex: 1;
+  -webkit-flex: 1;
+  -moz-box-flex: 1;
+  -moz-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -moz-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-direction: normal;
+  -webkit-box-orient: horizontal;
+  -webkit-flex-direction: row;
+  -moz-flex-direction: row;
+  -ms-flex-direction: row;
+  flex-direction: row;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  -webkit-justify-content: space-between;
+  -moz-justify-content: space-between;
+  justify-content: space-between;
+}
+/* line 25, scss/_index.scss */
+.main div p span:first-child {
+  -webkit-box-flex: 1.5;
+  -webkit-flex: 1.5;
+  -moz-box-flex: 1.5;
+  -moz-flex: 1.5;
+  -ms-flex: 1.5;
+  flex: 1.5;
+}
+/* line 28, scss/_index.scss */
+.main div p span:nth-child(2) {
+  -webkit-box-flex: 2.5;
+  -webkit-flex: 2.5;
+  -moz-box-flex: 2.5;
+  -moz-flex: 2.5;
+  -ms-flex: 2.5;
+  flex: 2.5;
 }
