--- a/style/scss/_index.scss
+++ b/style/scss/_index.scss
@@ -28,10 +28,21 @@
         &:nth-child(2) {
           @include flex(2.5)
         }
+        &:nth-child(3) {
+          @include flex(0.8)
+        }
+        &:last-child {
+          @include flex(1.2)
+        }
         @include flex;
         @include display-flex;
         @include flex-direction(row);
         @include justify-content(space-between);
+        button {
+          @include flex;
+          @include display-flex;
+          @include justify-content(space-between);
+        }
       }
     }
   }
