--- a/style/style.css
+++ b/style/style.css
@@ -1659,3 +1659,41 @@ header nav ul li a:hover {
   -ms-flex: 2.5;
   flex: 2.5;
 }
+/* line 31, scss/_index.scss */
+.main div p span:nth-child(3) {
+  -webkit-box-flex: 0.8;
+  -webkit-flex: 0.8;
+  -moz-box-flex: 0.8;
+  -moz-flex: 0.8;
+  -ms-flex: 0.8;
+  flex: 0.8;
+}
+/* line 34, scss/_index.scss */
+.main div p span:last-child {
+  -webkit-box-flex: 1.2;
+  -webkit-flex: 1.2;
+  -moz-box-flex: 1.2;
+  -moz-flex: 1.2;
+  -ms-flex: 1.2;
+  flex: 1.2;
+}
+/* line 41, scss/_index.scss */
+.main div p span button {
+  -webkit-box-flex: 1;
+  -webkit-flex: 1;
+  -moz-box-flex: 1;
+  -moz-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -moz-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  -webkit-justify-content: space-between;
+  -moz-justify-content: space-between;
+  justify-content: space-between;
+}
